[project]
name = "audio-diffusion-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "setuptools==69.5.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
